added nginx and puma with capable to do the scale in dev environment

--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -4,6 +4,10 @@ MAINTAINER dilkhushsoni2010@gmail.com
 
 ENV BUNDLER_VERSION=2.0.2
 
+ENV RAILS_ROOT /var/www/rails-docker
+
+RUN mkdir -p $RAILS_ROOT
+
 RUN curl -sL https://deb.nodesource.com/setup_12.x | bash -
 
 RUN apt-get update && apt-get install -y \
@@ -31,7 +35,10 @@ RUN apt-get update && apt-get install -y \
 
 RUN gem install bundler -v 2.0.2
 
-WORKDIR /app
+WORKDIR $RAILS_ROOT
+
+ENV RAILS_ENV='development'
+ENV RACK_ENV='development'
 
 COPY Gemfile Gemfile.lock ./
 
@@ -39,8 +46,9 @@ RUN bundle config build.nokogiri --use-system-libraries
 
 RUN bundle check || bundle install
 
-COPY package.json ./
-COPY yarn.lock ./
+#CMD ["export", "SECRET_KEY_BASE='bin/rake secret'"]
+
+COPY yarn.lock package.json ./
 
 RUN npm --version
 
@@ -50,4 +58,8 @@ RUN yarn install --check-files
 
 COPY . ./
 
-ENTRYPOINT ["./entrypoints/docker-entrypoint.sh"]
+#RUN bundle exec rake assets:precompile SECRET_KEY_BASE=$SECRET_KEY_BASE
+
+EXPOSE 3000
+
+CMD ["bundle", "exec", "puma", "-C", "config/puma.rb"]
