--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,33 +4,42 @@ services:
   app:
     build:
       context: ./
-      dockerfile: Dockerfile
+      dockerfile: ./docker/app/Dockerfile
     depends_on:
       - database
       - redis
     ports:
-      - "3000:3000"
+      - "3000"
     volumes:
       - .:/app
       - gem_cache:/usr/local/bundle/gems
       - node_modules:/app/node_modules
     env_file: .env
-    environment:
-      RAILS_ENV: development
+
+  web:
+    build:
+      context: ./
+      dockerfile: ./docker/web/Dockerfile
+    depends_on:
+      - app
+    ports:
+      - 80:80
 
   database:
     image: postgres:12.1
     volumes:
-      - db_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
 
   redis:
     image: redis:5.0.7
+    volumes:
+      - redis_data:/data
 
   sidekiq:
     build:
-      context: .
-      dockerfile: Dockerfile
+      context: ./
+      dockerfile: ./docker/app/Dockerfile
     depends_on:
       - app
       - database
@@ -46,5 +55,6 @@ services:
 
 volumes:
   gem_cache:
-  db_data:
   node_modules:
+  postgres_data:
+  redis_data:
